Finished Dev Page

--- a/public/developers.html
+++ b/public/developers.html
@@ -35,22 +35,22 @@
         <!-- Developer 1 -->
         <div class="developer">
             <img src="/images/joe-image.jpg" alt="Joe's Image" width="200" height="200">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Hello! My name is Joe! I am computer science major here at SFSU. I know C++ and Java and want to be a software engineer eventually. I spend most of my time in gym, at school, or working on my social media marketing business. The picture is of me and my girlfriend's dog, James. </p>
         </div>
         <!-- Developer 2 -->
         <div class="developer">
-            <img src="gabe-image.jpg" alt="Gabe's Image">
+            <img src="/images/gabe.jpg" alt="Gabe's Image">
             <p> Hi! My name is Randolf Gabrielle Uy. I am a computer science major who is interested in backend and server development. Some skills I have include API development, database management / querying, and object oriented programming. Some hobbies I have include playing / watching basketball, building with legos, and listening to music. Please feel free to reach out if you would like to ask any questions!</p>
         </div>
         <!-- Developer 3 -->
         <div class="developer">
             <img src="/images/simon.jpg" alt="Simon's Image">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>My name is Simon. I'm junior at SFSU majoring in computer science. My languages are  C++, Java, and Python. I like boxing, hiking, hanging out with my friends.</p>
         </div>
         <!-- Developer 4 -->
         <div class="developer">
             <img src="/images/hillary.jpg" alt="Hilary's Image">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p> My name is Hilary. I'm junior at SFSU majoring in computer science. My languages are  C++, Java, and JavaScript. My hobbies are playing video games, cooking, and spending time with friends.</p>
         </div>
     </div>
 
