Fixed format for the developer page

--- a/public/developers.html
+++ b/public/developers.html
@@ -9,55 +9,51 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div id="navigation-bar">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="artist.html">Artist</a></li>
+                    <li><a href="artists_comparison.html">Artist Comparison</a></li>
+                    <li><a href="song.html">Songs</a></li>
+                    <li><a href="song_comparison.html">Compare Songs</a></li>
+                    <li><a href="developers.html">Developers</a></li>
+                    <li><a href="#">User</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-<header>
-    <div id="title">
-        <h1 id="Title">Comparify</h1>
-    </div>
-    <div id="navigation-bar">
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="artist.html">Artist</a></li>
-                <li><a href="artists_comparison.html">Artist Comparison</a></li>
-                <li><a href="song.html">Songs</a></li>
-                <li><a href="song_comparison.html">Compare Songs</a></li>
-                <li><a href="developers.html">Developers</a></li>
-                <li><a href="#">User</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
-
-<div id="container">
-    <div id="content">
-        <h2>Meet the Developers</h2>
-        <!-- Developer 1 -->
-        <div class="developer">
-            <img src="/images/joe-image.jpg" alt="Joe's Image" width="200" height="200">
-            <p>Hello! My name is Joe! I am computer science major here at SFSU. I know C++ and Java and want to be a software engineer eventually. I spend most of my time in gym, at school, or working on my social media marketing business. The picture is of me and my girlfriend's dog, James. </p>
-        </div>
-        <!-- Developer 2 -->
-        <div class="developer">
-            <img src="/images/gabe.jpg" alt="Gabe's Image">
-            <p> Hi! My name is Randolf Gabrielle Uy. I am a computer science major who is interested in backend and server development. Some skills I have include API development, database management / querying, and object oriented programming. Some hobbies I have include playing / watching basketball, building with legos, and listening to music. Please feel free to reach out if you would like to ask any questions!</p>
-        </div>
-        <!-- Developer 3 -->
-        <div class="developer">
-            <img src="/images/simon.jpg" alt="Simon's Image">
-            <p>My name is Simon. I'm junior at SFSU majoring in computer science. My languages are  C++, Java, and Python. I like boxing, hiking, hanging out with my friends.</p>
-        </div>
-        <!-- Developer 4 -->
-        <div class="developer">
-            <img src="/images/hillary.jpg" alt="Hilary's Image">
-            <p> My name is Hilary. I'm junior at SFSU majoring in computer science. My languages are  C++, Java, and JavaScript. My hobbies are playing video games, cooking, and spending time with friends.</p>
+    <div id="container">
+        <div id="content">
+            <h2>Meet the Developers</h2>
+            <!-- Developer 1 -->
+            <div class="developer">
+                <img src="/images/joe-image.jpg" alt="Joe's Image" width="200" height="200">
+                <p>Hello! My name is Joe! I am computer science major here at SFSU. I know C++ and Java and want to be a software engineer eventually. I spend most of my time in gym, at school, or working on my social media marketing business. The picture is of me and my girlfriend's dog, James. </p>
+            </div>
+            <!-- Developer 2 -->
+            <div class="developer">
+                <img src="/images/gabe.jpg" alt="Gabe's Image">
+                <p> Hi! My name is Randolf Gabrielle Uy. I am a computer science major who is interested in backend and server development. Some skills I have include API development, database management / querying, and object oriented programming. Some hobbies I have include playing / watching basketball, building with legos, and listening to music. Please feel free to reach out if you would like to ask any questions!</p>
+            </div>
+            <!-- Developer 3 -->
+            <div class="developer">
+                <img src="/images/simon.jpg" alt="Simon's Image">
+                <p>My name is Simon. I'm junior at SFSU majoring in computer science. My languages are  C++, Java, and Python. I like boxing, hiking, hanging out with my friends.</p>
+            </div>
+            <!-- Developer 4 -->
+            <div class="developer">
+                <img src="/images/hillary.jpg" alt="Hilary's Image">
+                <p> My name is Hilary. I'm junior at SFSU majoring in computer science. My languages are  C++, Java, and JavaScript. My hobbies are playing video games, cooking, and spending time with friends.</p>
+            </div>
         </div>
     </div>
-
     <div id="footer">
         <!-- You can add footer content here -->
     </div>
-</div>
+</body>
 
 <script src="index.js"></script>
 </body>
