--- a/public/developers.html
+++ b/public/developers.html
@@ -9,30 +9,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div id="navigation-bar">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="artist.html">Artist</a></li>
+                    <li><a href="artists_comparison.html">Artist Comparison</a></li>
+                    <li><a href="song.html">Songs</a></li>
+                    <li><a href="song_comparison.html">Compare Songs</a></li>
+                    <li><a href="developers.html">Developers</a></li>
+                    <li><a href="#">User</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-<header>
-    <div id="title">
-        <h1 id="Title">Comparify</h1>
-    </div>
-    <div id="navigation-bar">
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="artist.html">Artist</a></li>
-                <li><a href="artists_comparison.html">Artist Comparison</a></li>
-                <li><a href="song.html">Songs</a></li>
-                <li><a href="song_comparison.html">Compare Songs</a></li>
-                <li><a href="developers.html">Developers</a></li>
-                <li><a href="#">User</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
-
-<div id="container">
-    <div id="content">
+    <div id="container">
         <h2>Meet the Developers</h2>
-        
         <!-- Developer 1 -->
         <div class="developer top-left">
             <img src="/images/joe-image.jpg" alt="Joe's Image">
@@ -54,12 +48,11 @@
             <p> My name is Hilary. I'm junior at SFSU majoring in computer science. My languages are  C++, Java, and JavaScript. My hobbies are playing video games, cooking, and spending time with friends.</p>
         </div>
     </div>
-
+    
     <div id="footer">
         <!-- You can add footer content here -->
     </div>
-</div>
-
+</body>
 <script src="index.js"></script>
 </body>
 </html>
