--- a/public/developers.html
+++ b/public/developers.html
@@ -13,6 +13,7 @@
         <div id="navigation-bar">
             <nav>
                 <ul>
+                    <img src="/images/matchify_transparent.gif" alt="Logo" width="200" height="200">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="artist.html">Artist</a></li>
                     <li><a href="artists_comparison.html">Artist Comparison</a></li>
