--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -15,6 +15,7 @@
       <div id = "navigation">
         <nav>
           <ul>
+            <img src="/images/matchify_transparent.gif" alt="Logo" width="200" height="200">
             <li><a href = "index.html">Home</a></li>
             <li><a href = "artist.html">Artist</a></li>
             <li><a href = "artists_comparison.html"> Artist Comparison</a></li>
