--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -35,19 +35,11 @@
         From iconic classics to contemporary hits, we've got you covered on your musical journey!"</p>
       <div class = "row">
         <div class = "column">
-          <div class="dropdown1">
-            <button onclick="myFunction1()" class="dropbtn1">Search Song 1</button>
-            <div id="myDropdown1" class="dropdown-content1">
-              <input type="text" placeholder="Search.." id="myInput1" onkeyup="filterFunction1()">
-              <a href="#about">Drake</a>
-              <a href="#support">Dominic Fike</a>
-              <a href="#base">Fergie</a>
-              <a href="#blog">Frank Ocean</a>
-              <a href="#support">Red Hot Chili Pepper</a>
-              <a href="#contact">SZA</a>
-              <a href="#custom">The 1975</a>
-            </div>
+          <div>
+            <label for="compare1Dropdown">Choose comparison 1:</label>
+            <select id="compare1Dropdown"></select>
           </div>
+
           <h2 class = "centered_text"> Nights</h2>
           <img class = "center img" id = "artist-image" src="/images/example-blonde.jpeg" alt="song-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
@@ -58,18 +50,9 @@
             id = "url_link"><p class = "centered_text">Song Link</p></a>
         </div>
         <div class = "column">
-          <div class="dropdown1">
-            <button onclick="myFunction1()" class="dropbtn1">Search Song 2</button>
-            <div id="myDropdown1" class="dropdown-content1">
-              <input type="text" placeholder="Search.." id="myInput1" onkeyup="filterFunction1()">
-              <a href="#about">Drake</a>
-              <a href="#support">Dominic Fike</a>
-              <a href="#base">Fergie</a>
-              <a href="#blog">Frank Ocean</a>
-              <a href="#support">Red Hot Chili Pepper</a>
-              <a href="#contact">SZA</a>
-              <a href="#custom">The 1975</a>
-            </div>
+          <div>
+            <label for="compare2Dropdown">Choose comparison 2:</label>
+            <select id="compare2Dropdown"></select>
           </div>
           <h2 class = "centered_text"> Bed Peace</h2>
           <img class = "center img" id = "artist-image" src="/images/example-sail_out.png" alt="song-picture" style = "width: 150px; 
