Fixed the artist / song to update when the songs are selected

--- a/public/artists_comparison.html
+++ b/public/artists_comparison.html
@@ -35,10 +35,9 @@
             <select id="compare1Dropdown"></select>
           </div>
 
-          <h2 class = "centered_text"> Kanye West </h2>
+          <h1 id ="Title1">Artist Comparison</h1>
           <img class = "center img" id = "artist-image" src="/images/example-kanye.jpg" alt="artist-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
-          <p class = "centered_text"> Artist(s): Kanye</p>
           <p class = "centered_text"> Music Type: Rap / Pop </p>
           <p class = "centered_text"> From: Atlanta, Georgia</p>
           <p class = "centered_text"> Popularity index: 95</p>
@@ -57,10 +56,9 @@
           </div>
 
 
-          <h2 class = "centered_text"> Drake </h2>
+          <h1 id ="Title2">Artist Comparison</h1>
           <img class = "center img" id = "artist-image" src="/images/example-drake.jpeg" alt="artist-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
-          <p class = "centered_text"> Artist(s): Drake</p>
           <p class = "centered_text"> Music Type: Rap / Pop </p>
           <p class = "centered_text"> From: Toronto, Canda</p>
           <p class = "centered_text"> Popularity index: 99</p>
@@ -81,6 +79,6 @@
     </div>
     <div id = "footer">
     </div>
-    <script type = "module" src="artists_comparison.js">
+    <script type="module" src="artists_comparison.js">
     </script>
 </html>
