--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -40,7 +40,7 @@
             <select id="compare1Dropdown"></select>
           </div>
 
-          <h2 class = "centered_text"> Nights</h2>
+          <h1 id ="Title1">Artist Comparison</h1>
           <img class = "center img" id = "artist-image" src="/images/example-blonde.jpeg" alt="song-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
           <p class = "centered_text" id = "artist_name">Artist: Frank Ocean</p>
@@ -54,7 +54,7 @@
             <label for="compare2Dropdown">Choose comparison 2:</label>
             <select id="compare2Dropdown"></select>
           </div>
-          <h2 class = "centered_text"> Bed Peace</h2>
+          <h1 id ="Title2">Artist Comparison</h1>
           <img class = "center img" id = "artist-image" src="/images/example-sail_out.png" alt="song-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
           <p class = "centered_text" id = "artist_name">Artist: Jhene Aiko</p>
