--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -43,9 +43,9 @@
           <h1 id ="Title1">Artist Comparison</h1>
           <img class = "center img" id = "artist-image" src="/images/example-blonde.jpeg" alt="song-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
-          <p class = "centered_text" id = "artist_name">Artist: Frank Ocean</p>
-          <p class = "centered_text" id = "ablum_type">Album: Blonde</p>
-          <p class = "centered_text" id = "views">Views: 1000000</p>
+          <p id = "Artist1">Artist: </p>
+          <p id = "Album1">Album: </p>
+          <p id = "Views1">Views: </p>
           <a href = "https://open.spotify.com/track/7eqoqGkKwgOaWNNHx90uEZ?si=7ab66c3d30434be3" class = "centered_text" 
             id = "url_link"><p class = "centered_text">Song Link</p></a>
         </div>
@@ -57,9 +57,9 @@
           <h1 id ="Title2">Artist Comparison</h1>
           <img class = "center img" id = "artist-image" src="/images/example-sail_out.png" alt="song-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
-          <p class = "centered_text" id = "artist_name">Artist: Jhene Aiko</p>
-          <p class = "centered_text" id = "ablum_type">Album: Sail Out</p>
-          <p class = "centered_text" id = "views">Views: 1000000</p>
+          <p id = "Artist2">Artist: </p>
+          <p id = "Album2">Album: </p>
+          <p id = "Views2">Views: </p>
           <a class = "centered_text" href = "https://open.spotify.com/track/5Ck3e6z1bcSCes5gdo0Ddt?si=4a558f1e15b14b7d" 
             id = "url_link"><p class = "centered_text">Song Link</p></a>
         </div>
