--- a/public/artists_comparison.html
+++ b/public/artists_comparison.html
@@ -40,7 +40,7 @@
           height: 150px; object-fit: cover; object-position: 25% 25%;">
           <p id = "Music1"> Music Type: </p>
           <p id = "Location1"> Location: </p>
-          <p id = "Popularity1"> Popularity index: </p>
+          <p id = "Popularity1"> Popularity Index: </p>
           <p class = "centered_text" id = "artist description"> Kanye West, born in Atlanta in 1977, is a renowned American rapper, 
           producer, and fashion designer. He gained fame for his groundbreaking albums like "The College Dropout" and "My Beautiful Dark Twisted Fantasy," 
           which pushed the boundaries of hip-hop and won critical acclaim. Beyond music, Kanye has ventured into fashion with his Yeezy brand, 
@@ -61,7 +61,7 @@
           height: 150px; object-fit: cover; object-position: 25% 25%;">
           <p id = "Music2"> Music Type: </p>
           <p id = "Location2"> Location</p>
-          <p id = "Popularity2"> Popularity index</p>
+          <p id = "Popularity2"> Popularity Index</p>
           <p class = "centered_text" id = "artist description"> 
             Drake, born Aubrey Drake Graham in 1986, is a Canadian rapper, singer, songwriter, and actor. 
             He first gained recognition through his role on the television series "Degrassi: The Next Generation" and 
