Created route handling / server-side application for application, connected routes for openai for artist description / comparison, and html side display for website

--- a/public/artists_comparison.html
+++ b/public/artists_comparison.html
@@ -41,13 +41,7 @@
           <p id = "Music1"> Music Type: </p>
           <p id = "Location1"> Location: </p>
           <p id = "Popularity1"> Popularity Index: </p>
-          <p class = "centered_text" id = "artist description"> Kanye West, born in Atlanta in 1977, is a renowned American rapper, 
-          producer, and fashion designer. He gained fame for his groundbreaking albums like "The College Dropout" and "My Beautiful Dark Twisted Fantasy," 
-          which pushed the boundaries of hip-hop and won critical acclaim. Beyond music, Kanye has ventured into fashion with his Yeezy brand, 
-          collaborating with major labels and creating his own line. He is known for his outspoken personality, often making headlines for his candid and 
-          controversial statements. Some of his most notable songs includes Flashing Lights (Graduation), Runaway (My Beautiful Dark Twisted Fantasy), and 
-          Heartless (808s & Heartbreaks)
-        </p>
+          <p id = "Description1"> Artist Description</p>
       </div>
         <div class="column">
           <div>
@@ -62,15 +56,7 @@
           <p id = "Music2"> Music Type: </p>
           <p id = "Location2"> Location</p>
           <p id = "Popularity2"> Popularity Index</p>
-          <p class = "centered_text" id = "artist description"> 
-            Drake, born Aubrey Drake Graham in 1986, is a Canadian rapper, singer, songwriter, and actor. 
-            He first gained recognition through his role on the television series "Degrassi: The Next Generation" and 
-            then transitioned into a successful music career. Drake is known for his versatile style, blending hip-hop, R&B, 
-            and pop influences, and he has released numerous chart-topping albums like "Views," "Take Care," and "Scorpion." 
-            His signature emotional and introspective lyrics have resonated with a global audience, 
-            making him one of the most commercially successful and critically acclaimed artists in contemporary music. 
-            In addition to his music, Drake is also a savvy entrepreneur and has made significant contributions to the world of fashion and business.
-          </p>
+          <p id = "Description2"> Artist Description</p>
           </div>
         </div>
     </div>
