--- a/public/index.html
+++ b/public/index.html
@@ -8,23 +8,36 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
   </head>
+  <header>
+    <div id = "navigation">
+      <nav>
+        <ul>
+          <div class="Flexbox-container">
+            <li><div class="flexbox-item1 Flexbox Item 1"><img src="/images/matchify_transparent.gif" alt="Logo" width="100" height="100"></div>
+            <li><div class="flexbox-item Flexbox Item "><a href = "index.html">Home</a></div></li>
+            <li><div class="flexbox-item Flexbox Item "><a href = "artist.html">Artist</a></li>
+            <li><div class="flexbox-item Flexbox Item "><a href = "artists_comparison.html"> Artist Comparison</a></li>
+            <li><div class="flexbox-item Flexbox Item "><a href = "song.html">Songs</a></li>
+            <li><div class="flexbox-item Flexbox Item "><a href = "song_comparison.html">Compare Songs</a></li>
+            <li><div class="flexbox-item Flexbox Item "><a href = "developers.html">Developers</a></li>
+            <li><div class="flexbox-item Flexbox Item "><a href = "#">User</a></li>
+          </div>
+          <!--
+          <li><img src="images/matchify_transparent.gif" alt="Logo" width="100" height="100">
+          <li><a href = "index.html">Home</a></li>
+          <li><a href = "artist.html">Artist</a></li>
+          <li><a href = "artists_comparison.html"> Artist Comparison</a></li>
+          <li><a href = "song.html">Songs</a></li>
+          <li><a href = "song_comparison.html">Compare Songs</a></li>
+          <li><a href = "developers.html">Developers</a></li>
+          <li><a href = "#">User</a></li>
+          -->
+          </ul>
+      </nav>
+    </div>
+  </header>
   <body>
-    <header>
-      <div id = "navigation">
-        <nav>
-          <ul>
-            <img src="/images/matchify_transparent.gif" alt="Logo" width="200" height="200">
-            <li><a href = "index.html">Home</a></li>
-            <li><a href = "artist.html">Artist</a></li>
-            <li><a href = "artists_comparison.html"> Artist Comparison</a></li>
-            <li><a href = "song.html">Songs</a></li>
-            <li><a href = "song_comparison.html">Compare Songs</a></li>
-            <li><a href = "developers.html">Developers</a></li>
-            <li><a href = "#">User</a></li>
-            </ul>
-        </nav>
-      </div>
-    </header>
+    
     <div id = "container">
       <h2 class = "centered_text">Visualization of the means of Comparify's Database</h2>
       <div class="simple-bar-chart">
