Update developers.html with new nva bar

--- a/public/developers.html
+++ b/public/developers.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content= "text/html;charset=UTF-8">
     <meta name = "description" content = "Data Analysis on the different artists and songs on Youtube and Spotify.">
-    <title>Developers</title>
+    <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <div id="navigation-bar">
-            <nav>
-                <ul>
-                    <img src="/images/matchify_transparent.gif" alt="Logo" width="200" height="200">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="artist.html">Artist</a></li>
-                    <li><a href="artists_comparison.html">Artist Comparison</a></li>
-                    <li><a href="song.html">Songs</a></li>
-                    <li><a href="song_comparison.html">Compare Songs</a></li>
-                    <li><a href="developers.html">Developers</a></li>
-                    <li><a href="#">User</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
+  </head>
+  <header>
+    <div id = "navigation">
+      <nav>
+        <ul>
+          <div class="Flexbox-container">
+            <li><div class="flexbox-item1 Flexbox Item 1"><img src="/images/matchify_transparent.gif" alt="Logo" width="100" height="100"></div>
+            <li><div class="flexbox-item Flexbox Item "><a href = "index.html">Home</a></div></li>
+            <li><div class="flexbox-item Flexbox Item "><a href = "artist.html">Artist</a></li>
+            <li><div class="flexbox-item Flexbox Item "><a href = "artists_comparison.html"> Artist Comparison</a></li>
+            <li><div class="flexbox-item Flexbox Item "><a href = "song.html">Songs</a></li>
+            <li><div class="flexbox-item Flexbox Item "><a href = "song_comparison.html">Compare Songs</a></li>
+            <li><div class="flexbox-item Flexbox Item "><a href = "developers.html">Developers</a></li>
+            <li><div class="flexbox-item Flexbox Item "><a href = "#">User</a></li>
+          </div>
+          </ul>
+      </nav>
+    </div>
+  </header>
+  <body>
     <div id="quadrants">
         <h2>Meet the Developers</h2>
         <!-- Developer 1 -->
