Refractored more code, moved to scripts folder

--- a/public/artists_comparison.html
+++ b/public/artists_comparison.html
@@ -66,6 +66,6 @@
     </div>
     <div id = "footer">
     </div>
-    <script type="module" src="artists_comparison.js">
+    <script type="module" src="./scripts/page_artists_comparison.js">
     </script>
 </html>
