--- a/public/song.html
+++ b/public/song.html
@@ -96,5 +96,5 @@
     anyChart.onDocumentReady(function() {
       });
   </script>
-  <script src="index.js"></script>
+  <script src="./scripts/page_songs.js"></script>
 </html>
