--- a/public/developers.html
+++ b/public/developers.html
@@ -56,6 +56,6 @@
     </div>
 </body>
 <script src="index.js"></script>
-<script src="developers.js"></script>
+<script src="./scripts/page_developers.js"></script>
 </body>
 </html>
