--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -74,7 +74,7 @@
     <div id = "footer">
     </div>
   </body>
-	<script src = "song_comparison.js">
+	<script src = "./scripts/page_songs_comparison.js">
     anyChart.onDocumentReady(function() {
       });
   </script>
