Added database queries, need to add routing for queries

--- a/public/song.html
+++ b/public/song.html
@@ -91,10 +91,9 @@
     <div id = "footer">
 
     </div>
+    <script src="./scripts/page_songs.js">
+      anyChart.onDocumentReady(function() {
+    });
+    </script>
   </body>
-  <script src = "song.js">
-    anyChart.onDocumentReady(function() {
-      });
-  </script>
-  <script src="./scripts/page_songs.js"></script>
 </html>
