--- a/public/index.html
+++ b/public/index.html
@@ -109,6 +109,6 @@
       </form>
     --> 
   </div>
-  <script src="index.js"></script>
+  <script src="./scripts/index.js"></script>
   </body>
 </html>
