--- a/public/index.html
+++ b/public/index.html
@@ -39,22 +39,22 @@
       </nav>
     </div>
   </header>
-  <body>
-    <div class="Flexbox-container2">
-      <div class="flexbox-itemhalf1 Flexbox Item 1" >
-        <h1>match your favorites and compare their stats</h1>
-        <a href = "song.html">
-        <button class="ghost-button" style="margin-left: 15%; float: inline-start;" >Songs</button>
-        </a>
-        <button class="FillButton" style="margin-left: 10%; color: black;" href = "artist.html">Artists</button>
-      </div>
-      <div class="flexbox-itemhalf2 Flexbox Item 1"><img src="images\example-drake.jpeg" alt="Screenshot" width="100%" height="80%"></div>
+<body>
+  <div class="Flexbox-container2">
+    <div class="flexbox-itemhalf1 Flexbox Item 1" >
+      <h1>match your favorites and compare their stats</h1>
+      <a href = "song.html">
+      <button class="ghost-button" style="margin-left: 15%; float: inline-start;" >Songs</button>
+      </a>
+      <button class="FillButton" style="margin-left: 10%; color: black;" href = "artist.html">Artists</button>
     </div>
-    <svg width="100%" height="100" style="padding-top: 2% ">
+      <div class="flexbox-itemhalf2 Flexbox Item 1"><img src="images\example-drake.jpeg" alt="Screenshot" width="100%" height="80%"></div>
+  </div>
+  <svg width="100%" height="100" style="padding-top: 2% ">
       <rect width="100%" height="70%" style="filter: blur(50px);margin-left: 10%; float: right; fill:rgba(108, 150, 122, 0.89); filter:opacity(100%) fil " />
-    </svg>
-    <div class="Flexbox-container2">
-      <div class="flexbox-itemhalf1 Flexbox Item 1" >
+  </svg>
+  <div class="Flexbox-container2">
+    <div class="flexbox-itemhalf1 Flexbox Item 1" >
         <div class="simple-bar-chart" style="clear: both;:">
           <div class="item" style="--clr: #5EB344; --val: 80">
           <div class="label">Danceability</div>
@@ -86,18 +86,29 @@
           <div class="value">85%</div>
         </div>
         </div>  
-      </div>
-      <div class="flexbox-itemhalf2 Flexbox Item 1">
-        <h2>what is our database?</h2>
-        <p1>The website relies on a organized extensive catalog of musical 
-          artists and their associated songs. Utilizing this database, the 
-          platform ensures seamless and rapid retrieval of information, 
-          enabling users to compare and contrast various artists and their 
-          compositions with ease.
-        </p1>
-      </div>
+    </div>
+    <div class="flexbox-itemhalf2 Flexbox Item 1">
+      <h3>Analytics</h3>
+      <h2>what is our database?</h2>
+      <p1>The website relies on a organized extensive catalog of musical 
+        artists and their associated songs. Utilizing this database, the 
+        platform ensures seamless and rapid retrieval of information, 
+        enabling users to compare and contrast various artists and their 
+        compositions with ease.
+      </p1>
+      <button class="FillButton" style="clear: both; margin-left: 10%; color: black;" href = "artist.html">Artists</button>
+    </div>
   </div>
-    
+  <div class="Flexbox-container2">
+    <div class="flexbox-itemhalf1 Flexbox Item 1" style="clear: both;">
+      <h3>Meet The Devs</h3>
+      <h2>who are we?</h2>
+      <p1>Four students from San Francisco State University with a passion for coding while listening to good music. Learn more about us below.
+      </p1>
+    </div>  
+    <div class="flexbox-itemhalf2 Flexbox Item 1">
+      
+    </div>
   </div>
   <div id = "footer">
     <p class = "centered_text">Click here for the documentaion of our site journey</p>
@@ -110,5 +121,6 @@
     --> 
   </div>
   <script src="./scripts/index.js"></script>
-  </body>
+</body>
+
 </html>
