--- a/public/developers.html
+++ b/public/developers.html
@@ -13,7 +13,8 @@
       <nav>
         <ul>
           <div class="Flexbox-container">
-            <li><div class="flexbox-item1 Flexbox Item 1"><img src="/images/matchify_transparent.gif" alt="Logo" width="100" height="100"></div>
+            <li><div class="flexbox-item1 Flexbox Item 1"><img src="images/matchify_transparent.gif" alt="Logo" width="100" height="100"></div></li>
+            <li><div class="flexbox-item2 Flexbox Item "><a>Matchify</a></div></li>
             <li><div class="flexbox-item Flexbox Item "><a href = "index.html">Home</a></div></li>
             <li><div class="flexbox-item Flexbox Item "><a href = "artist.html">Artist</a></li>
             <li><div class="flexbox-item Flexbox Item "><a href = "artists_comparison.html"> Artist Comparison</a></li>
@@ -22,7 +23,7 @@
             <li><div class="flexbox-item Flexbox Item "><a href = "developers.html">Developers</a></li>
             <li><div class="flexbox-item Flexbox Item "><a href = "#">User</a></li>
           </div>
-          </ul>
+        </ul>
       </nav>
     </div>
   </header>
