--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
       </p1>
     </div>  
     <div class="flexbox-itemhalf2 Flexbox Item 1">
-      
+      <img src="images\example-drake.jpeg" alt="Screenshot" width="100%" height="80%">
     </div>
   </div>
   <div id = "footer">
