./ added to images

--- a/public/song.html
+++ b/public/song.html
@@ -16,7 +16,7 @@
       <nav>
         <ul>
           <div class="Flexbox-container">
-            <li><div class="flexbox-item1 Flexbox Item 1"><img src="/images/matchify_transparent.gif" alt="Logo" width="100" height="100"></div>
+            <li><div class="flexbox-item1 Flexbox Item 1"><img src="./images/matchify_transparent.gif" alt="Logo" width="100" height="100"></div>
             <li><div class="flexbox-item Flexbox Item "><a href = "index.html">Home</a></div></li>
             <li><div class="flexbox-item Flexbox Item "><a href = "artist.html">Artist</a></li>
             <li><div class="flexbox-item Flexbox Item "><a href = "artists_comparison.html"> Artist Comparison</a></li>
@@ -46,7 +46,7 @@
           </div>
         </div>
         <h2 id = "song-name" style = "text-align: center;"> Surround Sound </h2>
-        <img id = "song-image" src="/images/JIDalbum.png" alt="song-picture" class = "center img">
+        <img id = "song-image" src="./images/JIDalbum.png" alt="song-picture" class = "center img">
         <p class = "centered_text"> Artists: JID, 21 Savage, Baby Tate</p>
         <p class = "centered_text"> Album: The Forever Story</p>
         <p class = "centered_text"> Music Type: Rap</p>
