--- a/public/artist.html
+++ b/public/artist.html
@@ -13,7 +13,7 @@
       <nav>
         <ul>
           <div class="Flexbox-container">
-            <li><div class="flexbox-item1 Flexbox Item 1"><img src="images/matchify_transparent.gif" alt="Logo" width="100" height="100"></div></li>
+            <li><div class="flexbox-item1 Flexbox Item 1"><img src="./images/matchify_transparent.gif" alt="Logo" width="100" height="100"></div></li>
             <li><div class="flexbox-item2 Flexbox Item "><a>Matchify</a></div></li>
             <li><div class="flexbox-item Flexbox Item "><a href = "index.html">Home</a></div></li>
             <li><div class="flexbox-item Flexbox Item "><a href = "artist.html">Artist</a></li>
@@ -43,7 +43,7 @@
         </div>
       </div>
       <h2 id = "artist-name" style = "text-align: center;"> The 1975 </h2>
-      <img id = "artist-image" src="/images/example-1975.jpeg" alt="artist-picture" class = "center img">
+      <img id = "artist-image" src="./images/example-1975.jpeg" alt="artist-picture" class = "center img">
       <p class = "center"> Artists: Matty Healy, Ross MacDonald, George Daniel, Adam Hann</p>
       <p class = "center"> Music Type: Alternative Pop</p>
       <p class = "center"> From: Wilmslow, United Kingdom</p>
