--- a/public/artists_comparison.html
+++ b/public/artists_comparison.html
@@ -16,7 +16,7 @@
         <nav>
           <ul>
             <div class="Flexbox-container">
-              <li><div class="flexbox-item1 Flexbox Item 1"><img src="images/matchify_transparent.gif" alt="Logo" width="100" height="100"></div></li>
+              <li><div class="flexbox-item1 Flexbox Item 1"><img src="./images/matchify_transparent.gif" alt="Logo" width="100" height="100"></div></li>
               <li><div class="flexbox-item2 Flexbox Item "><a>Matchify</a></div></li>
               <li><div class="flexbox-item Flexbox Item "><a href = "index.html">Home</a></div></li>
               <li><div class="flexbox-item Flexbox Item "><a href = "artist.html">Artist</a></li>
@@ -40,7 +40,7 @@
           </div>
 
           <h1 id ="Title1">Artist Comparison</h1>
-          <img class = "center img" id = "artist-image" src="images/example-kanye.jpg" alt="artist-picture" style = "width: 150px; 
+          <img class = "center img" id = "artist-image" src="./images/example-kanye.jpg" alt="artist-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
           <p id = "Music1"> Music Type: </p>
           <p id = "Location1"> Location: </p>
@@ -55,7 +55,7 @@
 
 
           <h1 id ="Title2">Artist Comparison</h1>
-          <img class = "center img" id = "artist-image" src="images/example-drake.jpeg" alt="artist-picture" style = "width: 150px; 
+          <img class = "center img" id = "artist-image" src="./images/example-drake.jpeg" alt="artist-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
           <p id = "Music2"> Music Type: </p>
           <p id = "Location2"> Location</p>
