--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -18,7 +18,7 @@
       <nav>
         <ul>
           <div class="Flexbox-container">
-            <li><div class="flexbox-item1 Flexbox Item 1"><img src="images/matchify_transparent.gif" alt="Logo" width="100" height="100"></div></li>
+            <li><div class="flexbox-item1 Flexbox Item 1"><img src="./images/matchify_transparent.gif" alt="Logo" width="100" height="100"></div></li>
             <li><div class="flexbox-item2 Flexbox Item "><a>Matchify</a></div></li>
             <li><div class="flexbox-item Flexbox Item "><a href = "index.html">Home</a></div></li>
             <li><div class="flexbox-item Flexbox Item "><a href = "artist.html">Artist</a></li>
@@ -48,7 +48,7 @@
           </div>
 
           <h1 id = "Artist1">Artist Name </h1>
-          <img class = "center img" id = "artist-image" src="images/example-blonde.jpeg" alt="song-picture" style = "width: 150px; 
+          <img class = "center img" id = "artist-image" src="./images/example-blonde.jpeg" alt="song-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
           <p id = "Album1">Album: </p>
           <p id = "Views1">Views: </p>
@@ -61,7 +61,7 @@
             <select id="compare2Dropdown"></select>
           </div>
           <h1 id = "Artist2">Artist Name</h1>
-          <img class = "center img" id = "artist-image" src="images/example-sail_out.png" alt="song-picture" style = "width: 150px; 
+          <img class = "center img" id = "artist-image" src="./images/example-sail_out.png" alt="song-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
           <p id = "Album2">Album: </p>
           <p id = "Views2">Views: </p>
