--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
             <li><div class="flexbox-item Flexbox Item "><a href = "song.html">Songs</a></li>
             <li><div class="flexbox-item Flexbox Item "><a href = "song_comparison.html">Compare Songs</a></li>
             <li><div class="flexbox-item Flexbox Item "><a href = "developers.html">Developers</a></li>
-            <li><div class="flexbox-item Flexbox Item "><a href = "#">User</a></li>
+            <li><div class="flexbox-item Flexbox Item "><a href = "user.html">User</a></li>
           </div>
           <!--
           <li><img src="images/matchify_transparent.gif" alt="Logo" width="100" height="100">
