Enforcing consistency with nav on all pages and fonts

--- a/public/artist.html
+++ b/public/artist.html
@@ -7,6 +7,8 @@
     <meta name = "description" content = "Data Analysis on the different artists and songs on Youtube and Spotify.">
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Outfit' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
   </head>
   <header>
     <div id = "navigation">
