--- a/public/artists_comparison.html
+++ b/public/artists_comparison.html
@@ -9,6 +9,8 @@
     <meta name = "description" content = "Data Analysis on the different artists and songs on Youtube and Spotify.">
     <title>Artist Comparison Page</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Outfit' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
   </head>
   <body>
     <header>
