--- a/public/user.html
+++ b/public/user.html
@@ -9,6 +9,8 @@
     <meta name = "description" content = "Data Analysis on the different artists and songs on Youtube and Spotify.">
     <title>User login Page</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Outfit' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
   </head>
   <!-- beginning of nav bar -->
   <header>
@@ -16,16 +18,17 @@
       <nav>
         <ul>
           <div class="Flexbox-container">
-            <li><div class="flexbox-item1 Flexbox Item 1"><img src="/images/matchify_transparent.gif" alt="Logo" width="100" height="100"></div>
+            <li><div class="flexbox-item1 Flexbox Item 1"><img src="./images/matchify_transparent.gif" alt="Logo" width="100" height="100"></div></li>
+            <li><div class="flexbox-item2 Flexbox Item "><a>Matchify</a></div></li>
             <li><div class="flexbox-item Flexbox Item "><a href = "index.html">Home</a></div></li>
             <li><div class="flexbox-item Flexbox Item "><a href = "artist.html">Artist</a></li>
             <li><div class="flexbox-item Flexbox Item "><a href = "artists_comparison.html"> Artist Comparison</a></li>
             <li><div class="flexbox-item Flexbox Item "><a href = "song.html">Songs</a></li>
             <li><div class="flexbox-item Flexbox Item "><a href = "song_comparison.html">Compare Songs</a></li>
             <li><div class="flexbox-item Flexbox Item "><a href = "developers.html">Developers</a></li>
-            <li><div class="flexbox-item Flexbox Item "><a href = "#">User</a></li>
+            <li><div class="flexbox-item Flexbox Item "><a href = "user.html">User</a></li>
           </div>
-          </ul>
+        </ul>
       </nav>
     </div>
   </header>
