Finished backend for artist comparison and song comparison

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
   </svg>
   <div class="Flexbox-container2">
     <div class="flexbox-itemhalf1 Flexbox Item 1" >
-        <div class="simple-bar-chart" style="clear: both;:">
+        <div class="simple-bar-chart" style="clear: both;">
           <div class="item" style="--clr: #5EB344; --val: 80">
           <div class="label">Danceability</div>
           <div class="value">80%</div>
