Reodering and slight tweaking

--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -76,7 +76,7 @@
     <div id = "footer">
     </div>
   </body>
-	<script src = "./scripts/page_songs_comparison.js">
+	<script src = "/scripts/page_songs_comparison.js">
     anyChart.onDocumentReady(function() {
       });
   </script>
