--- a/public/artist.html
+++ b/public/artist.html
@@ -97,5 +97,5 @@
   <div id = "footer">
 
   </div>
-  <script src="index.js"></script>
+  <script src="./scripts/page_artist.js"></script>
 </html>
