--- a/public/song.html
+++ b/public/song.html
@@ -94,7 +94,7 @@
     <div id = "footer">
 
     </div>
-    <script src="./scripts/page_songs.js">
+    <script src="./scripts/page_track.js">
       anyChart.onDocumentReady(function() {
     });
     </script>
