Created openai function for music type

--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -47,7 +47,7 @@
           <p id = "Music1"> Music Type: </p>
           <p id = "Location1"> Location: </p>
           <p id = "Popularity1"> Popularity Index: </p>
-          <p id = "Description1"> Artist Description</p>
+          <p id = "Description1"> Song Description</p>
       </div>
         <div class="column">
           <div>
@@ -62,7 +62,7 @@
           <p id = "Music2"> Music Type: </p>
           <p id = "Location2"> Location</p>
           <p id = "Popularity2"> Popularity Index</p>
-          <p id = "Description2"> Artist Description</p>
+          <p id = "Description2"> Song Description</p>
           </div>
         </div>
     </div>
