Boiler plate code for artist page

--- a/public/artist.html
+++ b/public/artist.html
@@ -107,5 +107,5 @@
   <div id = "footer">
 
   </div>
-  <script src="./scripts/page_artist.js"></script>
+  <script type = "module" src="./scripts/page_artist.js"></script>
 </html>
