--- a/public/developers.html
+++ b/public/developers.html
@@ -23,7 +23,7 @@
             <li><div class="flexbox-item Flexbox Item "><a href = "song.html">Songs</a></li>
             <li><div class="flexbox-item Flexbox Item "><a href = "song_comparison.html">Compare Songs</a></li>
             <li><div class="flexbox-item Flexbox Item "><a href = "developers.html">Developers</a></li>
-            <li><div class="flexbox-item Flexbox Item "><a href = "#">User</a></li>
+            <li><div class="flexbox-item Flexbox Item "><a href = "user.html">User</a></li>
           </div>
         </ul>
       </nav>
@@ -37,7 +37,7 @@
        
         <div class="Flexbox-container2">
           <div class="flexbox-itemhalf1 Flexbox Item 2">
-             <img src="./images/joe-image.jpg" alt="Joe's Image">
+             <div class="Developer"><img src="./images/joe-image.jpg" alt="Joe's Image"><
              <p1>Hello! My name is Joe! I am computer science major here at SFSU. I know C++ and Java and want to be a software engineer eventually. I spend most of my time in gym, at school, or working on my social media marketing business. The picture is of me and my girlfriend's dog, James.</p1>
               
                  </div>
