--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -26,7 +26,7 @@
             <li><div class="flexbox-item Flexbox Item "><a href = "song.html">Songs</a></li>
             <li><div class="flexbox-item Flexbox Item "><a href = "song_comparison.html">Compare Songs</a></li>
             <li><div class="flexbox-item Flexbox Item "><a href = "developers.html">Developers</a></li>
-            <li><div class="flexbox-item Flexbox Item "><a href = "#">User</a></li>
+            <li><div class="flexbox-item Flexbox Item "><a href = "user.html">User</a></li>
           </div>
         </ul>
       </nav>
