--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -37,8 +37,8 @@
       <div class="row">
         <div class="column">
           <div>
-            <label for="compare1Dropdown">Choose comparison 1:</label>
-            <select id="compare1Dropdown"></select>
+            <h3 style="float:inline-start ;" for="compare1Dropdown">Choose comparison 1:</h3>
+            <select style=""  id="compare1Dropdown"></select>
           </div>
 
           <h1 id ="Title1">Artist Comparison</h1>
